--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -104,7 +104,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_share"
-        android:contentDescription="@string/action_share" />
+        android:contentDescription="@string/action_share"
+        android:elevation="4dp" />
 
 
 </com.example.xyzreader.ui.DrawInsetsFrameLayout>
